force-app/main/default/objects/Transaction_Log__c/Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Object to handle transaction error logs</description>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Transaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>