force-app/main/default/objects/Transaction_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Trigger/Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>