force-app/main/default/objects/Transaction_Log__c/fields/Exception_Time__c.field-meta.xml
<CustomField>
    <fullName>Exception_Time__c</fullName>
    <description>Time at which exception occurred</description>
    <label>Exception Time</label>
    <type>DateTime</type>
</CustomField>